--- a/WinForms/WinForms/WinForms.csproj
+++ b/WinForms/WinForms/WinForms.csproj
@@ -44,14 +44,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="comida.cs" />
+    <Compile Include="frmCOMIDA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCOMIDA.Designer.cs">
+      <DependentUpon>frmCOMIDA.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMENU.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMENU.Designer.cs">
+      <DependentUpon>frmMENU.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmCOMIDA.resx">
+      <DependentUpon>frmCOMIDA.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMENU.resx">
+      <DependentUpon>frmMENU.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
