--- a/WinForms/WinForms/WinForms.csproj
+++ b/WinForms/WinForms/WinForms.csproj
@@ -51,11 +51,24 @@
       <DependentUpon>Bebidas.cs</DependentUpon>
     </Compile>
     <Compile Include="bebidas1.cs" />
+    <Compile Include="comida.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCOMIDA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCOMIDA.Designer.cs">
+      <DependentUpon>frmCOMIDA.cs</DependentUpon>
+    </Compile>
+    <Compile Include="menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="menu.Designer.cs">
+      <DependentUpon>menu.cs</DependentUpon>
     </Compile>
     <Compile Include="POSTRE.cs">
       <SubType>Form</SubType>
@@ -68,6 +81,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Bebidas.resx">
       <DependentUpon>Bebidas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCOMIDA.resx">
+      <DependentUpon>frmCOMIDA.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="menu.resx">
+      <DependentUpon>menu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="POSTRE.resx">
       <DependentUpon>POSTRE.cs</DependentUpon>
